feat(service): Atualizar serviço de Motorista para usar DozerMapper
- Substituído BeanUtils por DozerMapper para mapeamento de DTOs e entidades.