@@ -6,59 +6,44 @@ import com.solutis.locadoraVeiculos.exception.ResourceNotFoundException;
 import com.solutis.locadoraVeiculos.model.ModeloCarro;
 import com.solutis.locadoraVeiculos.repository.FabricanteRepository;
 import com.solutis.locadoraVeiculos.repository.ModeloCarroRepository;
+import com.solutis.locadoraVeiculos.mapper.DozerMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ModeloCarroService {
 
     @Autowired
     private ModeloCarroRepository modeloCarroRepository;
+
     @Autowired
     private FabricanteRepository fabricanteRepository;
 
-
-    public LerModeloCarroDto criarModeloCarro(ModeloCarroDto modeloCarroDto){
-        ModeloCarro modeloCarro = new ModeloCarro();
-        BeanUtils.copyProperties(modeloCarroDto,modeloCarro, "fabricante_id");
+    public LerModeloCarroDto criarModeloCarro(ModeloCarroDto modeloCarroDto) {
+        var modeloCarro = DozerMapper.parseObject(modeloCarroDto, ModeloCarro.class);
         modeloCarro.setFabricante(fabricanteRepository.findById(modeloCarroDto.getFabricante_id())
-                            .orElseThrow(ResourceNotFoundException::new));
+                .orElseThrow(ResourceNotFoundException::new));
 
-
-        LerModeloCarroDto lerModeloCarroDto = new LerModeloCarroDto();
         modeloCarro = modeloCarroRepository.save(modeloCarro);
-        BeanUtils.copyProperties(modeloCarro,lerModeloCarroDto);
-        return lerModeloCarroDto;
+        return DozerMapper.parseObject(modeloCarro, LerModeloCarroDto.class);
     }
 
-    public List<LerModeloCarroDto> retornarTodosOsModelosCarro(){
+    public List<LerModeloCarroDto> retornarTodosOsModelosCarro() {
         var modeloCarrosRecuperados = modeloCarroRepository.findAll();
-        var modelosCarrosDto = modeloCarrosRecuperados
-                .stream()
-                .map(fabricante -> {
-                 var modeloCarroDto = new LerModeloCarroDto();
-                 BeanUtils.copyProperties(fabricante,modeloCarroDto);
-                 return modeloCarroDto;
-                })
-                .toList();
-        return modelosCarrosDto;
+        return modeloCarrosRecuperados.stream()
+                .map(modeloCarro -> DozerMapper.parseObject(modeloCarro, LerModeloCarroDto.class))
+                .collect(Collectors.toList());
     }
 
-    public LerModeloCarroDto retornarModeloCarroPorid(Long id){
+    public LerModeloCarroDto retornarModeloCarroPorId(Long id) {
         var modeloCarroRecuperado = recuperarModeloCarroPorId(id);
-        var modeloCarroDto = new LerModeloCarroDto();
-        BeanUtils.copyProperties(modeloCarroRecuperado,modeloCarroDto);
-        return modeloCarroDto;
+        return DozerMapper.parseObject(modeloCarroRecuperado, LerModeloCarroDto.class);
     }
 
-    public void deletarModeloCarroPorId(Long id){
+    public void deletarModeloCarroPorId(Long id) {
         var modeloCarroRecuperado = recuperarModeloCarroPorId(id);
         modeloCarroRepository.delete(modeloCarroRecuperado);
     }
@@ -66,7 +51,4 @@ public class ModeloCarroService {
     private ModeloCarro recuperarModeloCarroPorId(Long id) {
         return modeloCarroRepository.findById(id).orElseThrow(ResourceNotFoundException::new);
     }
-
-
 }
-
